--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
     </div>
     <div class="footer-contact">
       <h3>Contact us:</h3>
-      <p><i class="fas fa-phone-alt"></i>0114279800</p>
-      <p><i class="fas fa-envelope"></i>help@ceyloan.lk</p>
+      <p><i class="fas fa-phone-alt"></i>072 456 1337</p>
+      <p><i class="fas fa-envelope"></i>Capital.lk</p>
       <p><i class="fas fa-clock"></i>Daily 8:00 AM - 10:30 PM</p>
       <div class="social-icons">
         <span>Follow us</span>
