--- a/index.html
+++ b/index.html
@@ -6,7 +6,246 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Styles skipped here for brevity – use the same CSS you posted originally */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 20px 10px;
+    }
+
+    .container,
+    .section-wrapper {
+      max-width: 400px;
+      width: 100%;
+      margin: 0 auto 30px;
+      background: white;
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    .slider-container {
+      margin: 20px 0;
+    }
+
+    input[type=range] {
+      width: 100%;
+    }
+
+    .output {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .repayment {
+      margin: 15px 0;
+      font-size: 18px;
+    }
+
+    .btn, .cta, .promo-button {
+      width: 100%;
+      background-color: #6e5eff;
+      color: white;
+      border: none;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    .promo-button {
+      background-color: #665fef;
+    }
+
+    .promo-button:hover {
+      background-color: #4368e4;
+    }
+
+    .eligibility-container {
+      max-width: 400px;
+      margin: 0 auto 30px;
+    }
+
+    .card {
+      display: flex;
+      align-items: center;
+      background: white;
+      padding: 16px 20px;
+      border-radius: 16px;
+      margin-bottom: 16px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.05);
+    }
+
+    .icon {
+      font-size: 28px;
+      color: #9b7bff;
+      background-color: #f1edff;
+      border-radius: 50%;
+      padding: 10px;
+      margin-right: 16px;
+    }
+
+    .info h3 {
+      margin: 0;
+      font-size: 18px;
+      color: #222;
+    }
+
+    .info p {
+      margin: 4px 0 0;
+      color: #555;
+      font-size: 15px;
+    }
+
+    .promo-section {
+      max-width: 400px;
+      width: 100%;
+      margin: 40px auto;
+      background-color: #f9f9ff;
+      padding: 30px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .promo-image {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    .promo-text {
+      margin-top: 20px;
+      text-align: center;
+      color: #333;
+      font-size: 18px;
+    }
+
+    .steps-section {
+      max-width: 400px;
+      width: 100%;
+      margin: 30px auto;
+    }
+
+    .step {
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+      background-color: #e0e7ff !important;
+      padding: 10px;
+      border-radius: 10px;
+    }
+
+    .number {
+      background-color: #4ff990ec;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      border-radius: 50%;
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 12px;
+    }
+
+    .check {
+      margin-left: auto;
+      color: rgb(70, 111, 244);
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .step .text {
+      flex: 1;
+      text-align: left;
+    }
+
+    .features-section {
+      max-width: 400px;
+      width: 100%;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .features-section h2 {
+      text-align: center;
+    }
+
+    .footer {
+      max-width: 400px;
+      width: 100%;
+      margin: 40px auto;
+      background-color: #000;
+      padding: 40px 20px;
+      color: #aaa;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .footer-links {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
+    }
+
+    .footer-links div {
+      flex: 1 1 200px;
+    }
+
+    .footer-links a {
+      display: block;
+      color: #aaa;
+      text-decoration: none;
+      margin-bottom: 10px;
+    }
+
+    .footer-contact {
+      border-top: 1px solid #222;
+      padding-top: 30px;
+    }
+
+    .footer-contact h3 {
+      color: #fff;
+      margin-bottom: 15px;
+    }
+
+    .footer-contact p {
+      margin: 8px 0;
+      color: #7fffaf;
+      font-size: 16px;
+    }
+
+    .footer-contact i {
+      margin-right: 10px;
+      color: #7fffaf;
+    }
+
+    .social-icons a {
+      margin-right: 15px;
+      color: #aaa;
+      font-size: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 1200px;
+      border: none;
+      margin-top: 40px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -29,8 +268,7 @@
       <strong>මාසික ගෙවීම:</strong> රු <span id="monthlyPayment">5,400</span>
     </div>
 
-    <!-- Apply Button Redirects to Google Form -->
-    <a href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank" class="btn">ණයක් ඉල්ලන්න</a>
+    <a href="#form-section"><button class="btn">ණයක් ඉල්ලන්න</button></a>
   </div>
 
   <!-- Eligibility -->
@@ -56,76 +294,21 @@
         <p>ස්ථිර ආදායමක් තිබීම</p>
       </div>
     </div>
-    <a href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank" class="cta">දැන්ම ණයක් ඉල්ලන්න</a>
+    <a href="#form-section"><button class="cta">දැන්ම ණයක් ඉල්ලන්න</button></a>
   </div>
 
-  <!-- Promo -->
-  <section class="promo-section">
-    <img src="https://i.ibb.co/nMDZ3sMb/pexels-moose-photos-170195-1036622.jpg" class="promo-image" />
-    <div class="promo-text">
-      <p>ඔබගේ පළමු online ණය – විනාඩි 15න්!</p>
-      <a href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank" class="promo-button">Apply for a loan</a>
-    </div>
-  </section>
-
-  <!-- Steps -->
-  <div class="steps-section">
-    <div class="step">
-      <div class="number">1</div>
-      <div class="text"><strong>ඔබේ ණය මුදල තෝරන්න</strong></div>
-    </div>
-    <div class="step">
-      <div class="number">2</div>
-      <div class="text"><strong>තිරණය සඳහා රැදී සිටින්න</strong></div>
-    </div>
-    <div class="step">
-      <div class="number">3</div>
-      <div class="text"><strong>ඔබගේ ගිණුමට මුදල් ලැබේ</strong></div>
-      <div class="check">✔</div>
-    </div>
+  <!-- Google Form Integration -->
+  <div id="form-section" class="container">
+    <h2>ඔබගේ තොරතුරු ඉදිරිපත් කරන්න</h2>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3T_3gsvUzQjTfQ4lWy-yNl3z5VKBAfKPBjhwTj4gC1ZlGmw/viewform?embedded=true">Loading…</iframe>
   </div>
-
-  <!-- Features -->
-  <div class="features-section">
-    <h2>අපගේ විශේෂත්වය</h2>
-    <div class="card">
-      <div class="icon">~</div>
-      <div class="info">
-        <h3>ලභාදයකි</h3>
-        <p>අවම ආපසු ගෙවීම් මුදලක් නිසා අපගේ සේවාව සුපිරියකි</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="icon">✓</div>
-      <div class="info">
-        <h3>විශ්වාසනීයයි</h3>
-        <p>Capital Lanka යනු වගකීමකින් යුතු සේවාවකි</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="icon">101</div>
-      <div class="info">
-        <h3>සරලයි</h3>
-        <p>ඉක්මන් හා සරල මුදල් විස්දැම් ඔබගේ නිවසේ සිටම</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Second Promo -->
-  <section class="promo-section">
-    <img src="https://i.ibb.co/q3W93MjW/features.png" class="promo-image" />
-    <div class="promo-text">
-      <p>Wait for the decision<br>Decision made in just 1 minute</p>
-      <a href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank" class="promo-button">Apply for a loan</a>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-links">
       <div>
         <a href="#">Home</a>
-        <a href="https://forms.gle/UjCRzKGr3cgYahkv8">Apply for a loan</a>
+        <a href="#">Apply for a loan</a>
         <a href="#">Privacy policy</a>
         <a href="#">Help</a>
       </div>
@@ -180,6 +363,5 @@
       updateLoanDetails(this.value);
     });
   </script>
-
 </body>
 </html>
