--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
       text-align: center;
     }
 
+    /* Footer styled like container */
     .footer {
       max-width: 400px;
       width: 100%;
@@ -237,15 +238,6 @@
       color: #aaa;
       font-size: 20px;
     }
-
-    iframe {
-      width: 100%;
-      height: 1200px;
-      border: none;
-      margin-top: 40px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
   </style>
 </head>
 <body>
@@ -268,7 +260,7 @@
       <strong>මාසික ගෙවීම:</strong> රු <span id="monthlyPayment">5,400</span>
     </div>
 
-    <a href="#form-section"><button class="btn">ණයක් ඉල්ලන්න</button></a>
+    <button class="btn">ණයක් ඉල්ලන්න</button>
   </div>
 
   <!-- Eligibility -->
@@ -294,14 +286,69 @@
         <p>ස්ථිර ආදායමක් තිබීම</p>
       </div>
     </div>
-    <a href="#form-section"><button class="cta">දැන්ම ණයක් ඉල්ලන්න</button></a>
+    <button class="cta">දැන්ම ණයක් ඉල්ලන්න</button>
   </div>
 
-  <!-- Google Form Integration -->
-  <div id="form-section" class="container">
-    <h2>ඔබගේ තොරතුරු ඉදිරිපත් කරන්න</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3T_3gsvUzQjTfQ4lWy-yNl3z5VKBAfKPBjhwTj4gC1ZlGmw/viewform?embedded=true">Loading…</iframe>
+  <!-- Promo -->
+  <section class="promo-section">
+    <img src="https://i.ibb.co/nMDZ3sMb/pexels-moose-photos-170195-1036622.jpg" class="promo-image" />
+    <div class="promo-text">
+      <p>ඔබගේ පළමු online ණය – විනාඩි 15න්!</p>
+      <button class="promo-button">>Apply for a loan</button>
+    </div>
+  </section>
+
+  <!-- Steps -->
+  <div class="steps-section">
+    <div class="step">
+      <div class="number">1</div>
+      <div class="text"><strong>ඔබේ ණය මුදල තෝරන්න</strong></div>
+    </div>
+    <div class="step">
+      <div class="number">2</div>
+      <div class="text"><strong>තිරණය සඳහා රැදී සිටින්න</strong></div>
+    </div>
+    <div class="step">
+      <div class="number">3</div>
+      <div class="text"><strong>ඔබගේ ගිණුමට මුදල් ලැබේ</strong></div>
+      <div class="check">✔</div>
+    </div>
   </div>
+
+  <!-- Features -->
+  <div class="features-section">
+    <h2>අපගේ විශේෂත්වය</h2>
+    <div class="card">
+      <div class="icon">~</div>
+      <div class="info">
+        <h3>ලභාදයකි</h3>
+        <p>අවම ආපසු ගෙවීම් මුදලක් නිසා අපගේ සේවාව සුපිරියකි</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="icon">✓</div>
+      <div class="info">
+        <h3>විශ්වාසනීයයි</h3>
+        <p>Capital Lanka යනු වගකීමකින් යුතු සේවාවකි</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="icon">101</div>
+      <div class="info">
+        <h3>සරලයි</h3>
+        <p>ඉක්මන් හා සරල මුදල් විස්දැම් ඔබගේ නිවසේ සිටම</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Second Promo -->
+  <section class="promo-section">
+    <img src="https://i.ibb.co/q3W93MjW/features.png" class="promo-image" />
+    <div class="promo-text">
+      <p>Wait for the decision<br>Decision made in just 1 minute</p>
+      <button class="promo-button">Apply for a loan</button>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="footer">
@@ -363,5 +410,6 @@
       updateLoanDetails(this.value);
     });
   </script>
+
 </body>
 </html>
