--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
     }
 
     .btn, .cta, .promo-button {
+      display: inline-block;
       width: 100%;
       background-color: #6e5eff;
       color: white;
-      border: none;
+      text-align: center;
+      text-decoration: none;
       padding: 12px;
       font-size: 16px;
       border-radius: 10px;
@@ -182,7 +184,6 @@
       text-align: center;
     }
 
-    /* Footer styled like container */
     .footer {
       max-width: 400px;
       width: 100%;
@@ -242,7 +243,6 @@
 </head>
 <body>
 
-  <!-- Loan Calculator -->
   <div class="container">
     <h2>රු 500,000 දක්වා ණය – සම්පූර්ණයෙන්ම Online!</h2>
     <p>සරල අයදුම් ක්‍රියාවලියක් – ඔබේ හැඳුනුම්පත පමණක් අවශ්‍ය වේ.</p>
@@ -260,10 +260,9 @@
       <strong>මාසික ගෙවීම:</strong> රු <span id="monthlyPayment">5,400</span>
     </div>
 
-    <button class="btn">ණයක් ඉල්ලන්න</button>
+    <a class="btn" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">ණයක් ඉල්ලන්න</a>
   </div>
 
-  <!-- Eligibility -->
   <div class="eligibility-container">
     <div class="card">
       <div class="icon">👤</div>
@@ -286,19 +285,17 @@
         <p>ස්ථිර ආදායමක් තිබීම</p>
       </div>
     </div>
-    <button class="cta">දැන්ම ණයක් ඉල්ලන්න</button>
+    <a class="cta" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">දැන්ම ණයක් ඉල්ලන්න</a>
   </div>
 
-  <!-- Promo -->
   <section class="promo-section">
     <img src="https://i.ibb.co/nMDZ3sMb/pexels-moose-photos-170195-1036622.jpg" class="promo-image" />
     <div class="promo-text">
       <p>ඔබගේ පළමු online ණය – විනාඩි 15න්!</p>
-      <button class="promo-button">>Apply for a loan</button>
+      <a class="promo-button" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">Apply for a loan</a>
     </div>
   </section>
 
-  <!-- Steps -->
   <div class="steps-section">
     <div class="step">
       <div class="number">1</div>
@@ -315,7 +312,6 @@
     </div>
   </div>
 
-  <!-- Features -->
   <div class="features-section">
     <h2>අපගේ විශේෂත්වය</h2>
     <div class="card">
@@ -341,16 +337,14 @@
     </div>
   </div>
 
-  <!-- Second Promo -->
   <section class="promo-section">
     <img src="https://i.ibb.co/q3W93MjW/features.png" class="promo-image" />
     <div class="promo-text">
       <p>Wait for the decision<br>Decision made in just 1 minute</p>
-      <button class="promo-button">Apply for a loan</button>
+      <a class="promo-button" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">Apply for a loan</a>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="footer-links">
       <div>
