--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin: 0 auto 30px;
       background: white;
       border-radius: 15px;
-      padding: 16px;
+      padding: 20px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
@@ -48,7 +48,7 @@
       font-size: 18px;
     }
 
-    .btn, .cta, .promo-button {
+    .btn, .cta {
       display: inline-block;
       width: 100%;
       background-color: #6e5eff;
@@ -64,6 +64,16 @@
 
     .promo-button {
       background-color: #665fef;
+      padding: 10px 16px;
+      font-size: 14px;
+      font-weight: bold;
+      border-radius: 8px;
+      display: inline-block;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      width: auto;
+      max-width: 250px;
     }
 
     .promo-button:hover {
@@ -114,6 +124,7 @@
       padding: 30px 20px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
 
     .promo-image {
@@ -124,7 +135,6 @@
 
     .promo-text {
       margin-top: 20px;
-      text-align: center;
       color: #333;
       font-size: 18px;
     }
@@ -139,7 +149,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 15px;
-      background-color: #e0e7ff !important;
+      background-color: #e0e7ff;
       padding: 10px;
       border-radius: 10px;
     }
