--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <strong>මාසික ගෙවීම:</strong> රු <span id="monthlyPayment">5,400</span>
     </div>
 
-    <a class="btn" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">ණයක් ඉල්ලන්න</a>
+    <a class="btn" href="https://forms.gle/qPBJuX9akn4aRtGR9" target="_blank">ණයක් ඉල්ලන්න</a>
   </div>
 
   <div class="eligibility-container">
@@ -311,7 +311,7 @@
     <img src="https://i.ibb.co/nMDZ3sMb/pexels-moose-photos-170195-1036622.jpg" class="promo-image" />
     <div class="promo-text">
       <p>ඔබගේ පළමු online ණය – විනාඩි 15න්!</p>
-      <a class="promo-button" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">Apply for a loan</a>
+      <a class="promo-button" href="https://forms.gle/qPBJuX9akn4aRtGR9" target="_blank">Apply for a loan</a>
     </div>
   </section>
 
@@ -360,7 +360,7 @@
     <img src="https://i.ibb.co/q3W93MjW/features.png" class="promo-image" />
     <div class="promo-text">
       <p>Wait for the decision<br>Decision made in just 1 minute</p>
-      <a class="small-promo-button" href="https://forms.gle/UjCRzKGr3cgYahkv8" target="_blank">Apply for a loan</a>
+      <a class="small-promo-button" href="https://forms.gle/qPBJuX9akn4aRtGR9" target="_blank">Apply for a loan</a>
     </div>
   </section>
 
