--- a/index.html
+++ b/index.html
@@ -2,93 +2,161 @@
 <html lang="si">
 <head>
   <meta charset="UTF-8">
-  <title>CashUp – රු 500,000 දක්වා Online ණය</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CashUp – Online Loan</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; line-height: 1.6; }
-    .slider-container, .repayment, .requirements, .steps, .features, .contact, .footer {
-      margin-bottom: 30px;
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+      color: #333;
     }
+
+    header, section, footer {
+      padding: 20px;
+      margin: auto;
+      max-width: 800px;
+    }
+
+    header {
+      background-color: #004aad;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    h1, h2, h3 {
+      margin-top: 0;
+    }
+
+    .slider-container,
+    .repayment,
+    .features,
+    .steps,
+    .requirements,
+    .contact {
+      background: white;
+      padding: 20px;
+      margin-top: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    input[type="range"] {
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    .output {
+      font-size: 20px;
+      margin-top: 10px;
+      font-weight: bold;
+      color: #004aad;
+    }
+
     .btn {
       display: inline-block;
-      padding: 10px 20px;
-      background: #28a745;
+      margin-top: 20px;
+      background-color: #28a745;
       color: white;
+      padding: 12px 24px;
       text-decoration: none;
-      border-radius: 5px;
       font-weight: bold;
+      border-radius: 5px;
+      transition: background 0.3s ease;
     }
-    .output { margin-top: 10px; font-size: 18px; }
+
+    .btn:hover {
+      background-color: #218838;
+    }
+
+    ul, ol {
+      padding-left: 20px;
+    }
+
+    footer {
+      background: #eee;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    .contact p {
+      margin: 5px 0;
+    }
+
+    @media (max-width: 600px) {
+      header, section, footer {
+        padding: 15px;
+      }
+
+      .btn {
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
 
-<h2>රු 500,000 දක්වා ණය – සම්පූර්ණයෙන්ම Online!</h2>
-<p>සරල අයදුම් ක්‍රියාවලියක් – ඔබේ හැඳුනුම්පත පමණක් අවශ්‍ය වේ.</p>
+<header>
+  <h1>CashUp – රු 500,000 දක්වා ණය</h1>
+  <p>සම්පූර්ණයෙන්ම Online | විනාඩි 15න් අයදුම් කරන්න!</p>
+</header>
 
-<div class="slider-container">
+<section class="slider-container">
   <label for="loanRange">ඔබගේ ණය මුදල තෝරන්න:</label>
   <input type="range" id="loanRange" min="30000" max="500000" step="10000" value="30000" />
   <div class="output">රු <span id="loanAmount">30,000</span></div>
-</div>
+</section>
 
-<div class="repayment">
+<section class="repayment">
+  <h3>ගෙවීම් විස්තර</h3>
   මුළු ආපසු ගෙවීමේ මුදල: රු <span id="repaymentAmount">32,400</span><br>
   පොලී අනුපාතය: <span id="interestRate">8%</span><br>
   <strong>කාලය:</strong> <span id="duration">6</span> මාස<br>
   <strong>මාසික ගෙවීම:</strong> රු <span id="monthlyPayment">5,400</span>
-</div>
+  <br><a class="btn" href="https://forms.gle/SeQ5BrQbjRD3nh1J7" target="_blank">දැන්ම ණයක් ඉල්ලන්න</a>
+</section>
 
-<a class="btn" href="https://forms.gle/SeQ5BrQbjRD3nh1J7" target="_blank">ණයක් ඉල්ලන්න</a>
-
-<div class="requirements">
+<section class="requirements">
   <h3>අවශ්‍යතා</h3>
   <ul>
     <li>👤 වයස: අවුරුදු 20–60 අතර</li>
-    <li>📍 නවාසී ස්ථානය: ශ්‍රී ලංකාවේ නවාසිකයෙකු වීම</li>
-    <li>💳 රැකියාව: ස්ථිර ආදායමක් තිබීම</li>
+    <li>📍 නවාසිකයෙකු විය යුතුය – ශ්‍රී ලංකාවේ</li>
+    <li>💳 ස්ථිර ආදායමක් තිබිය යුතුය</li>
   </ul>
-</div>
+</section>
 
-<a class="btn" href="https://forms.gle/SeQ5BrQbjRD3nh1J7">දැන්ම ණයක් ඉල්ලන්න</a>
-
-<h3>ඔබගේ පළමු online ණය – විනාඩි 15න්!</h3>
-<a class="btn" href="https://forms.gle/SeQ5BrQbjRD3nh1J7">Apply for a loan</a>
-
-<div class="steps">
-  <h3>ක්‍රියාමාර්ග 3ක් පමණි:</h3>
+<section class="steps">
+  <h3>අයදුම් ක්‍රියාවලිය</h3>
   <ol>
-    <li>*ඔබේ ණය මුදල තෝරන්න*</li>
-    <li>*තිරණය සඳහා රැදී සිටින්න*</li>
-    <li>*ඔබගේ ගිණුමට මුදල් ලැබේ*</li>
+    <li>ඔබේ ණය මුදල තෝරන්න</li>
+    <li>තීරණය සඳහා රැදී සිටින්න (1මිනිටුවක්)</li>
+    <li>මුදල් ඔබේ ගිණුමට ලැබේ</li>
   </ol>
-</div>
+</section>
 
-<div class="features">
-  <h2>අපගේ විශේෂත්වය</h2>
+<section class="features">
+  <h3>අපගේ විශේෂත්වය</h3>
   <ul>
-    <li>~ ලභාදයකි – අවම ආපසු ගෙවීම් මුදලක් නිසා අපගේ සේවාව සුපිරියකි</li>
-    <li>✓ විශ්වාසනීයයි – CashUp යනු වගකීමකින් යුතු සේවාවකි</li>
-    <li>101 සරලයි – ඉක්මන් හා සරල මුදල් විස්දැම් ඔබගේ නිවසේ සිටම</li>
+    <li>~ අවම ආපසු ගෙවීම් – ඔබට පහසු</li>
+    <li>✓ විශ්වාසනීය සේවාවක් – CashUp</li>
+    <li>101% සරලයි – නිවසේ සිටම මුදල්</li>
   </ul>
-</div>
+</section>
 
-<h3>Wait for the decision – Decision made in just 1 minute</h3>
-<a class="btn" href="https://forms.gle/SeQ5BrQbjRD3nh1J7">Apply for a loan</a>
+<section class="contact">
+  <h3>Contact Us</h3>
+  <p><strong>දුරකථන:</strong> 072 479 7182</p>
+  <p><strong>සේවාව:</strong> CashUp</p>
+  <p><strong>විද්‍යුත් ලිපිනය:</strong> cashup@gmail.com</p>
+  <p><strong>සෙවාව ලබිය හැකි වේලාව:</strong> දිනපතා 8:00 AM - 10:30 PM</p>
+</section>
 
-<div class="footer">
-  <p>
-    <strong>Home</strong> | Apply for a loan | Privacy policy | Help | How to pay | About | Terms & conditions
-  </p>
-</div>
-
-<div class="contact">
-  <h3>Contact us:</h3>
-  <p><strong>072 479 7182</strong><br>
-     <strong>CashUp</strong><br>
-     <strong>Daily 8:00 AM - 10:30 PM</strong><br>
-     <strong>Email:</strong> cashup@gmail.com
-  </p>
-</div>
+<footer>
+  <p>© 2025 CashUp | Privacy Policy | Terms | Help</p>
+</footer>
 
 <script>
   const range = document.getElementById("loanRange");
